language/move-lang/tests/move_check/expansion/use_struct_invalid_name.exp
error[E03003]: unbound module member
  ┌─ tests/move_check/expansion/use_struct_invalid_name.move:7:17
  │
2 │ module X {
  │        - Module '0x2::X' declared here
  ·
7 │     use 0x2::X::u;
  │                 ^ Invalid 'use'. Unbound member 'u' in module '0x2::X'

error[E03004]: unbound type
  ┌─ tests/move_check/expansion/use_struct_invalid_name.move:8:19
  │
8 │     struct X { f: u }
  │                   ^ Unbound type 'u' in current scope

